--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,9 +10,11 @@
     "preview": "vite previesw"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.24",
     "lenis": "^1.1.9",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0"
