--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,9 @@
     "preview": "vite previesw"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@paypal/react-paypal-js": "^8.5.0",
+    "@stripe/react-stripe-js": "^2.8.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.24",
     "lenis": "^1.1.9",
@@ -17,7 +20,8 @@
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
