--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
     "tailwind-merge": "^2.5.2"
