--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.10.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -18,6 +23,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
+    "prisma": "^6.10.1",
     "stripe": "^18.2.1"
   }
 }
