--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint .",
     "preview": "vite previesw"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@paypal/react-paypal-js": "^8.5.0",
