--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,6 +7,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "prisma": {
     "seed": "node prisma/seed.js"
   },
