--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,9 +7,6 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "engines": {
-    "node": "20.x"
-  },
   "prisma": {
     "seed": "node prisma/seed.js"
   },
@@ -21,7 +18,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "4.21.2",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
