Remove preinstall script to avoid infinite loop

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "preinstall": "npm ci --omit=dev"
+    "dev": "nodemon server.js"
   },
   "engines": {
     "node": "20.x"
