--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "rm -rf node_modules && npm install"
+    "build": "rm -rf node_modules && npm install --production"
   },
   "engines": {
     "node": "20.x"
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "4.18.2",
+    "gopd": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
