--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,7 +9,8 @@
     "build": "rm -rf node_modules && npm install --production"
   },
   "engines": {
-    "node": "20.x"
+    "node": "20.x",
+    "npm": "9.x"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -22,8 +23,8 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "4.18.2",
-    "gopd": "^1.2.0",
+    "express": "^4.21.2",
+    "gopd": "1.2.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
