--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": " npm install --production"
+    "build": "rm -rf node_modules && npm install --production"
+  },
+  "resolutions": {
+    "debug": "4.3.4",
+    "finalhandler": "1.2.0"
   },
   "engines": {
     "node": "20.x",
@@ -24,6 +28,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "debug": "4.3.4",
+    "finalhandler": "1.2.0",
     "gopd": "1.2.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
