--- a/back-end/package.json
+++ b/back-end/package.json
@@ -28,9 +28,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "gopd": "1.2.0",
+    "qs": "6.11.0",
+    "get-intrinsic": "1.2.2",
+    "side-channel": "1.0.1",
     "debug": "4.3.4",
     "finalhandler": "1.2.0",
-    "gopd": "1.2.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
