--- a/back-end/package.json
+++ b/back-end/package.json
@@ -27,7 +27,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "4.18.2",
     "gopd": "1.2.0",
     "qs": "6.11.0",
     "get-intrinsic": "1.2.2",
