--- a/back-end/package.json
+++ b/back-end/package.json
@@ -26,18 +26,18 @@
     "@prisma/client": "^6.10.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "4.18.2",
-    "gopd": "1.2.0",
-    "qs": "6.11.0",
-    "get-intrinsic": "1.2.2",
-    "side-channel": "1.0.1",
     "debug": "4.3.4",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "finalhandler": "1.2.0",
+    "get-intrinsic": "1.2.2",
+    "gopd": "1.2.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
     "prisma": "^6.10.1",
+    "qs": "6.11.0",
+    "side-channel": "1.0.1",
     "stripe": "^18.2.1"
   },
   "devDependencies": {
