--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,6 +1,7 @@
 {
   "name": "back-end",
   "version": "1.0.0",
+  "packageManager": "npm@9.8.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -27,7 +28,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "debug": "4.3.4",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.0",
     "express": "^4.18.2",
     "finalhandler": "1.2.0",
     "get-intrinsic": "1.2.2",
