--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,21 +1,11 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  "packageManager": "npm@9.8.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "rm -rf node_modules && npm install --production"
-  },
-  "resolutions": {
-    "debug": "4.3.4",
-    "finalhandler": "1.2.0"
-  },
-  "engines": {
-    "node": "20.x",
-    "npm": "9.x"
+    "dev": "nodemon server.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -28,20 +18,13 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "debug": "4.3.4",
-    "dotenv": "^16.6.0",
-    "express": "^4.18.2",
-    "finalhandler": "1.2.0",
-    "get-intrinsic": "1.2.2",
-    "gopd": "1.2.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
     "prisma": "^6.10.1",
-    "qs": "6.11.0",
-    "side-channel": "1.0.1",
-    "stripe": "^18.2.1"
-  },
-  "devDependencies": {
+    "stripe": "^18.2.1",
     "nodemon": "^3.1.10"
   }
 }
