--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "prisma generate",
-    "prerelease": "prisma migrate deploy"
+    "dev": "nodemon server.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
