--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "postinstall": "prisma generate"
-  },
+  "start": "node server.js",
+  "dev": "nodemon server.js",
+  "postinstall": "prisma generate",
+  "build": "prisma generate"
+},
+
   "prisma": {
     "seed": "node prisma/seed.js"
   },
