--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js",
-  "postinstall": "prisma generate",
-  "build": "prisma generate"
-},
-
+    "dev": "nodemon server.js",
+    "build": "npx prisma generate",
+    "postinstall": "npx prisma generate",
+    "start": "node server.js"
+  },
   "prisma": {
     "seed": "node prisma/seed.js"
   },
