--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,6 +9,9 @@
     "postinstall": "npx prisma generate",
     "start": "node server.js"
   },
+  "engines": {
+  "node": "18.x"
+},
   "prisma": {
     "seed": "node prisma/seed.js"
   },
