--- a/back-end/package.json
+++ b/back-end/package.json
@@ -29,12 +29,12 @@
     "cors": "^2.8.5",
     "debug": "4.3.4",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "prisma": "^6.10.1",
-    "stripe": "^18.2.1",
-    "nodemon": "^3.1.10"
+    "stripe": "^18.2.1"
   }
 }
