--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean-install": "rm -rf node_modules && npm install",
     "dev": "nodemon server.js",
     "build": "rm -rf node_modules && npm install && npx prisma generate",
     "postinstall": "npx prisma generate",
@@ -29,7 +30,7 @@
     "cors": "^2.8.5",
     "debug": "4.3.4",
     "dotenv": "^16.5.0",
-    "express": "^4.18.2",
+    "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
