--- a/back-end/package.json
+++ b/back-end/package.json
@@ -25,7 +25,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.10.1",
+    "@prisma/client": "^6.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "debug": "4.3.4",
@@ -35,7 +35,9 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
-    "prisma": "^6.10.1",
     "stripe": "^18.2.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.11.0"
   }
 }
