--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,7 +12,7 @@
     "render-start": "npm install --production --force && npx prisma generate && node server.js"
   },
   "engines": {
-    "node": "18.x",
+    "node": ">=18.0.0 <21.0.0",
     "npm": ">=9.0.0 <10.0.0"
   },
   "prisma": {
