--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,7 +9,7 @@
     "build": "rm -rf node_modules && npm install --force && npx prisma generate",
     "postinstall": "npx prisma generate",
     "start": "node server.js",
-    "render-start": "npm ci --production && npx prisma generate && node server.js"
+    "render-start": "NODE_OPTIONS='--max-old-space-size=512' npm ci --production && npx prisma generate && node server.js"
   },
   "engines": {
     "node": "18.x",
