--- a/back-end/package.json
+++ b/back-end/package.json
@@ -26,12 +26,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@arcjet/node": "^1.0.0-beta.8",
     "@prisma/client": "^6.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "debug": "4.3.4",
     "dotenv": "^16.5.0",
     "express": "4.18.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
