--- a/back-end/package.json
+++ b/back-end/package.json
@@ -32,9 +32,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
-    "stripe": "^18.2.1"
-  },
-  "devDependencies": {
+    "stripe": "^18.2.1",
     "prisma": "^6.11.0"
-  }
+  },
+  "devDependencies": {}
 }
